<resources>
    <string name="app_name">conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_global_feed">Global Feed</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_auth">Login/SignUp</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_article">Article</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetch_feed">Fetch Feed</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="article_id">articleId</string>
    <string name="action_logout">Logout</string>
</resources>